--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ matrix:
   include:
   - os: linux
     python: 3.6
-    dist: xenial
-    env: PIP_CMD='pip install -e .[dev]' TEST_CMD='tests/travis/testing.sh'
-  - os: linux
-    python: 3.6
     dist: bionic
     env: PIP_CMD='pip install -e .[dev]' TEST_CMD='tests/travis/testing.sh'
   - os: linux
     python: 3.7
+    dist: bionic
+    env: PIP_CMD='pip install -e .[dev]' TEST_CMD='tests/travis/testing.sh'
+  - os: linux
+    python: 3.8
     dist: bionic
     env: PIP_CMD='pip install -e .[dev]' TEST_CMD='tests/travis/testing.sh'
 
