--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
 install:
 - conda create -n test-environment python=$TRAVIS_PYTHON_VERSION
 - source activate test-environment
-- "$PIP_CMD"
+- $PIP_CMD
 - conda info -a
 script:
 - travis_wait 40 bash $TEST_CMD
