--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,12 @@
 [bumpversion]
-current_version = 0.0.5
+current_version = 0.0.6-rc0
 commit = True
 tag = True
 tag_name = {new_version}
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<rc>\d+))?
-serialize =
+serialize = 
 	{major}.{minor}.{patch}-{release}{rc}
 	{major}.{minor}.{patch}
-
 
 [flake8]
 max-line-length = 79
